--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button#headerBtn:hover {
     background: black;
     color: white;
 }
+
 .heroWrapper {
   display: flex;
   flex-direction: column;
@@ -75,6 +76,10 @@ button#headerBtn:hover {
   background: black;
   color: white;
   cursor: pointer;
+}
+button.heroBtn a {
+    text-decoration: none;
+    color: white;
 }
 #WebDev {
   background-color: #0d13210a;
